unpackaged/main/default/objects/Targeting_Plan__c/Targeting_Plan__c.object-meta.xml
<CustomObject>
    <description>Plans d'action commerciaux</description>
    <label>Targeting Plan</label>
    <nameField>
        <label>Targeting Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targeting Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>