unpackaged/main/default/objects/Targeting_Plan__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>Business Unit associée au PAC</description>
    <label>TO be deleted BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>TAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>