unpackaged/main/default/objects/Targeting_Plan__c/fields/Check_Owner__c.field-meta.xml
<CustomField>
    <fullName>Check_Owner__c</fullName>
    <description>Champ non-affiché sur le layout, utilisé pour la génération de rapports relatifs aux PAC</description>
    <formula>OwnerId =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Owner</label>
    <type>Checkbox</type>
</CustomField>