unpackaged/main/default/objects/Targeting_Plan__c/fields/Date_du_jour__c.field-meta.xml
<CustomField>
    <fullName>Date_du_jour__c</fullName>
    <description>Champ non-affiché sur le layout, utilisé dans les critères du lookup filter sur le champ "Targeting Plan" de l'objet "PAC/Accounts"</description>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date du jour</label>
    <type>DateTime</type>
</CustomField>