unpackaged/main/default/objects/Targeting_Plan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description du PAC</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>