unpackaged/main/default/objects/Targeting_Plan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date de fin du PAC</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>