unpackaged/main/default/objects/Targeting_Plan__c/fields/Global_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Global_Target_Amount__c</fullName>
    <description>Montant cible global du PAC</description>
    <formula>Licences_Target_Amount__c + Prof_Services_Target_Amount__c + Saas_Target_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Target Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>