unpackaged/main/default/objects/Targeting_Plan__c/fields/Parent_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PAC Parent</description>
    <label>Parent Plan</label>
    <referenceTo>Targeting_Plan__c</referenceTo>
    <relationshipLabel>Targeting Plans</relationshipLabel>
    <relationshipName>Plans_Comerciaux</relationshipName>
    <type>Lookup</type>
</CustomField>