unpackaged/main/default/objects/Targeting_Plan__c/fields/Saas_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Saas_Target_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Montant cible pour la dimension de Booking SaaS</description>
    <label>SaaS Booking Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>