unpackaged/main/default/objects/Targeting_Plan__c/fields/Sales_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Sales_Purpose__c</fullName>
    <label>Sales Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Purpose</valueSetName>
    </valueSet>
</CustomField>