unpackaged/main/default/objects/Targeting_Plan__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date de lancement du PAC</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>