unpackaged/main/default/objects/Targeting_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Statut du PAC</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
                <isActive>false</isActive>
                <label>Abandoned</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
                <isActive>false</isActive>
                <label>Awaiting Approval</label>
            </value>
            <value>
                <fullName>Done</fullName>
                <isActive>false</isActive>
                <label>Done</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>