unpackaged/main/default/objects/Targeting_Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type du PAC</description>
    <label>TO BE DELETED Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Finalit_de_vente</valueSetName>
    </valueSet>
</CustomField>