unpackaged/main/default/objects/Targeting_Plan__c/listViews/All_Open_Targeting_Plans.listView-meta.xml
<ListView>
    <fullName>All_Open_Targeting_Plans</fullName>
    <columns>Expertise__c</columns>
    <columns>NAME</columns>
    <columns>Saas_Target_Amount__c</columns>
    <columns>Sales_Purpose__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In progress</value>
    </filters>
    <label>All Open Targeting Plans</label>
</ListView>