unpackaged/main/default/objects/Targeting_Plan__c/listViews/Copy_of_All_Targeting_Plans5632.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Targeting_Plans5632</fullName>
    <columns>Expertise__c</columns>
    <columns>NAME</columns>
    <columns>Saas_Target_Amount__c</columns>
    <columns>Sales_Purpose__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All Closed Targeting Plans</label>
</ListView>