unpackaged/main/default/objects/Targeting_Plan__c/listViews/My_Targeting_Plans.listView-meta.xml
<ListView>
    <fullName>My_Targeting_Plans</fullName>
    <columns>NAME</columns>
    <columns>Saas_Target_Amount__c</columns>
    <columns>Sales_Purpose__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Targeting Plans</label>
</ListView>